...
            modifier = Modifier.padding(horizontal = 20.dp, vertical = AppDimens.paddingNormal),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {

            // ── Balance ──────────────────────────────────────────────────────
            Text(
                "TOTAL BALANCE",
                style = MaterialTheme.typography.labelSmall,
                fontWeight = FontWeight.Bold,
                color = MaterialTheme.colorScheme.onSurface.copy(alpha = 0.5f)
            )
            Spacer(modifier = Modifier.height(AppDimens.paddingExtraSmall))
            Text(
...
